<resources>
    <string name="app_name">Cook4Me</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_main">Cook4Me</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="prompt_register">"Don\'t have an account? Tap here!"</string>

    <!-- Dialog Strings -->
    <string name="permission_error_title">Permission Error</string>
    <string name="permission_error_msg">You must log in first!</string>
    <string name="ok">OK</string>

    <!-- String related to Main Menu -->
    <string name="menu_title_recipes">Recipes</string>
    <string name="menu_title_cooking_terms">Cooking Terminology</string>
    <string name="menu_title_cooking_techs">Cooking Fundamentals</string>
    <string name="menu_title_settings">Settings</string>

    <!-- Strings related to Searching -->
    <string name="search_recipe_hint">Search Recipes</string>
    <string name="search_no_results">Search Query Not Found</string>

    <!-- Strings related to Recipes  -->
    <string name="add_recipe_title">Add Recipe</string>
    <string name="add_recipe_label">Title</string>
    <string name="add_recipe_label_hint">Recipe Title</string>
    <string name="add_recipe_ttc">Time To Cook</string>
    <string name="add_recipe_ttc_hint">10 minutes</string>
    <string name="add_recipe_ing">Ingredients</string>
    <string name="add_recipe_ing_hint">1 egg,\n1/2 cup of milk,\n2 tsp of butter</string>
    <string name="add_recipe_steps">Steps</string>
    <string name="add_recipe_steps_hint">1. Crack 1 egg into a small bowl.
        \n2. Whisk egg. \n3. Pour in milk.</string>
    <string name="submit">Submit</string>

    <!-- Strings related to Recipe Instructions-->
    <string name="instructions_title_recipes">Recipe Instructions</string>
    <string name="cue_dictation">Hear Instructions</string>
    <string name="cue_speech">Issue Voice Command</string>
    <string name="recipe_start_button">Let\'s get cooking!</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_recipes">RecipesActivity</string>
    <string name="title_activity_cooking_terminology">CookingTerminologyActivity</string>
    <string name="title_activity_term">TermActivity</string>
    <string name="title_activity_search_recipe">SearchRecipeActivity</string>
    <string name="title_activity_add_recipe">AddRecipeActivity</string>
    <string name="title_activity_cooking_technique">CookingTechniqueActivity</string>
    <string name="title_activity_tech">TechActivity</string>
    <string name="title_activity_step_by_step_recipe">StepByStepRecipeActivity</string>
</resources>
